--- a/index.html
+++ b/index.html
@@ -1330,5 +1330,66 @@
             }, 300); // Short delay to show loading indicator
         }
     </script>
+    <!-- Install Button Container -->
+<div id="install-container" style="position: fixed; bottom: 20px; right: 20px; display: none; z-index: 1000;">
+  <button id="install-button" style="
+    padding: 12px 20px;
+    background: #c00000;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  ">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+      <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+      <polyline points="7 10 12 15 17 10"></polyline>
+      <line x1="12" y1="15" x2="12" y2="3"></line>
+    </svg>
+    Install App
+  </button>
+</div>
+
+<script>
+// Install PWA functionality
+let deferredPrompt;
+
+// Show install button when ready
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  const installContainer = document.getElementById('install-container');
+  installContainer.style.display = 'block';
+  
+  // Auto-hide after 10 seconds
+  setTimeout(() => {
+    if (installContainer.style.display === 'block') {
+      installContainer.style.display = 'none';
+    }
+  }, 10000);
+});
+
+// Handle install button click
+document.getElementById('install-button').addEventListener('click', async () => {
+  if (!deferredPrompt) return;
+  
+  deferredPrompt.prompt();
+  const { outcome } = await deferredPrompt.userChoice;
+  
+  if (outcome === 'accepted') {
+    document.getElementById('install-container').style.display = 'none';
+  }
+  deferredPrompt = null;
+});
+
+// Hide button if app is already installed
+window.addEventListener('appinstalled', () => {
+  document.getElementById('install-container').style.display = 'none';
+});
+</script>
 </body>
 </html>
