--- a/index.html
+++ b/index.html
@@ -1421,5 +1421,15 @@ window.addEventListener('appinstalled', () => {
   document.getElementById('install-container').style.display = 'none';
 });
 </script>
+    <script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('service-worker.js', { scope: './' })
+    .then(registration => {
+      console.log('SW registered: ', registration);
+    }).catch(registrationError => {
+      console.log('SW registration failed: ', registrationError);
+    });
+}
+</script>
 </body>
 </html>
