--- a/index.html
+++ b/index.html
@@ -1403,5 +1403,22 @@ if (!window.appInstall) {
   }
 }
 </script>
+    <script>
+  // Enhanced service worker registration
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('service-worker.js', { scope: './' })
+        .then(registration => {
+          console.log('SW registered with scope:', registration.scope);
+          
+          // Check for updates hourly
+          setInterval(() => registration.update(), 60 * 60 * 1000);
+        })
+        .catch(error => {
+          console.log('SW registration failed:', error);
+        });
+    });
+  }
+</script>
 </body>
 </html>
